# gita_test

./: .gitignore  .pre-commit-config.yaml  .replit  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  USER_ACQUISITION.md  UV_SETUP.md  __init__.py  api_client.py  audio.py  check_email_confirmation.py  check_user_exists.py  config.py  debug_user.py  fix_existing_user.py  pyproject.toml  report.md  requirements.txt  setup.py  setup_uv.bat  setup_uv.py  test_api_endpoints.py  test_exact_credentials.py  test_login.py  test_login_fix.py  test_new_login.py  test_signin_fix.py  test_signup.py  test_signup_new8.py  test_user_profile.py  upload_results.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.gitlab/issue_templates/: bug_report.md  feature_request.md  question.md
.gitlab/merge_request_templates/: default.md
attached_assets/: Pasted--LOGIN-import-http-client-conn-http-c-1756313044593_1756313044595.txt  Pasted--LOGIN-import-http-client-conn-http-c-1756313276672_1756313276673.txt
data/: chapter12.json  chapter15.json  chapter16.json
database/: db_utils.py  schema.sql
scripts/: bulk_audio_uploader.py  db_audio_url_updater.py  db_populator.py  test_supabase.py
streamlit_app/: admin_dashboard.py  login.py  main.py
streamlit_app/pages/: user_portal.py
